chore: update some code